dependancies related bug fixed